Fixed "jumping" video problem in CSS and added Twitter meta tag to index.html

--- a/samples/web/content/apprtc/css/main.css
+++ b/samples/web/content/apprtc/css/main.css
@@ -264,7 +264,6 @@ label {
 }
 
 video#localVideo {
-  height: 100%;
   max-height: 100%;
   max-width: 100%;
   transition: opacity 2s;
